.metadata/.plugins/org.eclipse.cdt.ui/FreqRelay.build.log
14:15:37 **** Incremental Build of configuration Nios II for project FreqRelay ****
make all 
Info: Building ../FreqRelay_bsp
D:/ALTERA/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../FreqRelay_bsp
[BSP build complete]
Info: Compiling hello_freqRelay.c to obj/default/hello_freqRelay.o
nios2-elf-gcc -xc -MP -MMD -c -I../FreqRelay_bsp/HAL/inc -I../FreqRelay_bsp -I../FreqRelay_bsp/drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mhw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_freqRelay.o hello_freqRelay.c
hello_freqRelay.c: In function 'vKeyboardISRHandler':
hello_freqRelay.c:168:13: warning: variable 'key_value' set but not used [-Wunused-but-set-variable]
     uint8_t key_value;
             ^
hello_freqRelay.c: In function 'vFrequencyAnalyzerTask':
hello_freqRelay.c:377:42: warning: implicit declaration of function 'fabs' [-Wimplicit-function-declaration]
                                          fabs(local_freq_data.roc) < MAX_FREQ_ROC);
                                          ^
hello_freqRelay.c:377:42: warning: incompatible implicit declaration of built-in function 'fabs'
hello_freqRelay.c:377:42: note: include '<math.h>' or provide a declaration of 'fabs'
hello_freqRelay.c: In function 'vMakeLoadDecision':
hello_freqRelay.c:423:13: warning: incompatible implicit declaration of built-in function 'fabs'
         if (fabs(pxFreqData->roc) > MAX_FREQ_ROC) {
             ^
hello_freqRelay.c:423:13: note: include '<math.h>' or provide a declaration of 'fabs'
hello_freqRelay.c: In function 'vLoadActuatorTask':
hello_freqRelay.c:475:16: warning: unused variable 'local_actuator' [-Wunused-variable]
     Actuator_t local_actuator;
                ^
hello_freqRelay.c: In function 'vManualOverrideTask':
hello_freqRelay.c:688:47: error: assignment to expression with array type
                     gLoadDecision.load_status = (slider_value & 0x000F);
                                               ^
In file included from hello_freqRelay.c:23:0:
../FreqRelay_bsp/HAL/inc/io.h:75:65: warning: passing argument 2 of '__builtin_stwio' makes integer from pointer without a cast [-Wint-conversion]
   __builtin_stwio (__IO_CALC_ADDRESS_NATIVE ((BASE), (REGNUM)), (DATA))
                                                                 ^
../FreqRelay_bsp/drivers/inc/altera_avalon_pio_regs.h:38:55: note: in expansion of macro 'IOWR'
 #define IOWR_ALTERA_AVALON_PIO_DATA(base, data)       IOWR(base, 0, data)
                                                       ^
hello_freqRelay.c:689:21: note: in expansion of macro 'IOWR_ALTERA_AVALON_PIO_DATA'
                     IOWR_ALTERA_AVALON_PIO_DATA(GREEN_LEDS_BASE, gLoadDecision.load_status);
                     ^
../FreqRelay_bsp/HAL/inc/io.h:75:65: note: expected 'int' but argument is of type 'uint8_t * {aka unsigned char *}'
   __builtin_stwio (__IO_CALC_ADDRESS_NATIVE ((BASE), (REGNUM)), (DATA))
                                                                 ^
../FreqRelay_bsp/drivers/inc/altera_avalon_pio_regs.h:38:55: note: in expansion of macro 'IOWR'
 #define IOWR_ALTERA_AVALON_PIO_DATA(base, data)       IOWR(base, 0, data)
                                                       ^
hello_freqRelay.c:689:21: note: in expansion of macro 'IOWR_ALTERA_AVALON_PIO_DATA'
                     IOWR_ALTERA_AVALON_PIO_DATA(GREEN_LEDS_BASE, gLoadDecision.load_status);
                     ^
hello_freqRelay.c: In function 'main':
hello_freqRelay.c:749:45: warning: passing argument 3 of 'alt_irq_register' from incompatible pointer type [-Wincompatible-pointer-types]
     alt_irq_register(PUSH_BUTTON_IRQ, NULL, vKeyboardISRHandler);
                                             ^
In file included from ../FreqRelay_bsp/HAL/inc/sys/alt_irq.h:218:0,
                 from freertos/portmacro.h:77,
                 from freertos/portable.h:95,
                 from freertos/FreeRTOS.h:104,
                 from hello_freqRelay.c:13:
../FreqRelay_bsp/HAL/inc/priv/alt_legacy_irq.h:61:12: note: expected 'alt_isr_func {aka void (*)(void *, long unsigned int)}' but argument is of type 'void (*)(void *)'
 extern int alt_irq_register (alt_u32 id, 
            ^
hello_freqRelay.c:752:52: warning: passing argument 3 of 'alt_irq_register' from incompatible pointer type [-Wincompatible-pointer-types]
     alt_irq_register(FREQUENCY_ANALYSER_IRQ, NULL, vFrequencyISRHandler);
                                                    ^
In file included from ../FreqRelay_bsp/HAL/inc/sys/alt_irq.h:218:0,
                 from freertos/portmacro.h:77,
                 from freertos/portable.h:95,
                 from freertos/FreeRTOS.h:104,
                 from hello_freqRelay.c:13:
../FreqRelay_bsp/HAL/inc/priv/alt_legacy_irq.h:61:12: note: expected 'alt_isr_func {aka void (*)(void *, long unsigned int)}' but argument is of type 'void (*)(void *)'
 extern int alt_irq_register (alt_u32 id, 
            ^
hello_freqRelay.c: At top level:
hello_freqRelay.c:187:13: warning: 'vSystemResetISRHandler' defined but not used [-Wunused-function]
 static void vSystemResetISRHandler(void* context) {
             ^
hello_freqRelay.c:237:13: warning: 'vShedISRHandler' defined but not used [-Wunused-function]
 static void vShedISRHandler(void* context) {
             ^
hello_freqRelay.c:247:13: warning: 'vFailSafeISRHandler' defined but not used [-Wunused-function]
 static void vFailSafeISRHandler(void* context) {
             ^
make: *** [obj/default/hello_freqRelay.o] Error 1

14:15:38 Build Finished (took 963ms)

